// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutContainer should render correctly in dark 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#111111",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    entering={[Function]}
    forwardedRef={[Function]}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    scrollEventThrottle={1}
    style={
      {
        "paddingBottom": 90,
        "paddingHorizontal": 24,
        "paddingTop": 25,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "SFProText-Regular",
              "fontSize": 18,
            },
            false,
            {
              "textAlign": "left",
            },
            {
              "lineHeight": 27,
            },
          ]
        }
      >
        Sample Text
      </Text>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`LayoutContainer should render correctly in dark 2`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    entering={[Function]}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    style={
      {
        "paddingBottom": 90,
        "paddingHorizontal": 24,
        "paddingTop": 25,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "black",
            "fontFamily": "SFProText-Regular",
            "fontSize": 18,
          },
          false,
          {
            "textAlign": "left",
          },
          {
            "lineHeight": 27,
          },
        ]
      }
    >
      Sample Text
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`LayoutContainer should render correctly in light 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#111111",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    entering={[Function]}
    forwardedRef={[Function]}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    scrollEventThrottle={1}
    style={
      {
        "paddingBottom": 90,
        "paddingHorizontal": 24,
        "paddingTop": 25,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "color": "white",
              "fontFamily": "SFProText-Regular",
              "fontSize": 18,
            },
            false,
            {
              "textAlign": "left",
            },
            {
              "lineHeight": 27,
            },
          ]
        }
      >
        Sample Text
      </Text>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`LayoutContainer should render correctly in light 2`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
    entering={[Function]}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    style={
      {
        "paddingBottom": 90,
        "paddingHorizontal": 24,
        "paddingTop": 25,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "black",
            "fontFamily": "SFProText-Regular",
            "fontSize": 18,
          },
          false,
          {
            "textAlign": "left",
          },
          {
            "lineHeight": 27,
          },
        ]
      }
    >
      Sample Text
    </Text>
  </View>
</RCTSafeAreaView>
`;
